--- a/project/package.json
+++ b/project/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "canvas-confetti": "^1.9.3",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.5"
+    "react-ga4": "^2.1.0",
+    "tailwindcss": "^4.1.5",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
